--- a/longterm.html
+++ b/longterm.html
@@ -121,7 +121,10 @@
 		
 		<br><br><br>
 		<!--line breaks -->
-		
+
+		<center><a href="moneytrackerz.html">Go Home</a></center>
+		<!-- Return to Home page-->
+		<br><br>
 
 		<!-- bottom footer1 -->
 		<center>This application is 100% supported by the UHMANOA ICS <strong>LizardSquad</strong></center><br>
